2006-10-13  Hans Breuer  <hans@breuer.org>

	* app/load_svae.c : make it compile by defining W_OK if it is
	not there and also use '#if GLIB_CHECK_VERSION(2,8,0)' instead
	of '#ifdef GLIB_CHECK_VERSION(2,8,0)'. Strange that gcc 
	apparently compiled this

	* lib/parent.[ch] : parent_handle_move_in_check() was moving 
	the checked point about twice as much as needed, bug #342773.
	
2006-10-12  Lars Clausen  <lars@raeder.dk>

	* app/load_save.c (diagram_data_save): If we have GTK 2.8, check
	that we are allowed to write to the file in question (if it
	exists) and to the directory (for backup/temp/newly created file).

	* lib/dia_dirs.c (dia_get_lib_directory, dia_get_data_directory): 
	* lib/Makefile.am (AM_CPPFLAGS): 
	* app/Makefile.am (INCLUDES): Rename DATADIR and LIBDIR to
	DIA_DATADIR and DIA_LIBDIR to avoid conflicts with libtool and the
	like.  Thanks to lode leroy <lode_leroy@hotmail.com> for pointing
	out the solution.

	* plug-ins/pstricks/render_pstricks.c (export_pstricks) 
	(draw_string): Use \psscalebox instead of \scalebox, courtesy of
	Dan Bolser <dmb@mrc-dunn.cam.ac.uk> and the pstricks mailing list.

	* shapes/Makefile.am (SUBDIRS): 
	* configure.in: 
	* shapes/BPMN/*
	* sheets/BPMN.sheet.in: 
	* sheets/Makefile.am (sheet_in_files): New shape set BPMN for
	Business Process Modelling from anthonym@overture.com.

	* doc/en/dia.dbk: Correctly describing connections.

	* objects/standard/box.c: Patch from Michael Duelli
	<m.duelli@web.de>: Set line attributes before drawing anything.

2006-10-08  Lars Clausen  <lars@raeder.dk>

	* configure.in: Allow compiling without freetype on Unix systems.
	The effect of changes to non-freetype parts of the code can now be
	tested, and I have no excuse to not fix them anymore:(

2006-10-01  Lars Clausen  <lars@raeder.dk>

	* app/modify_tool.c (modify_motion): Don't use null-ness of
	connectionpoint to skip snap-to-grid for non-connectable handles.
	Fixes bug #350246.
